--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,25 @@ jobs:
         name: Check composer.json
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
             - uses: shivammathur/setup-php@v2
               with:
                   coverage: none
-                  php-version: '8.0'
+                  php-version: '8.1'
             - run: composer validate --strict --no-check-lock
+
+    static_analysis:
+        name: Static analysis
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - uses: shivammathur/setup-php@v2
+              with:
+                  coverage: none
+                  php-version: '8.1'
+            - name: Install dependencies
+              run: composer update --ansi --no-progress --prefer-dist --no-interaction
+            - run: vendor/bin/phpstan analyze
 
     tests:
         name: "Tests on PHP ${{ matrix.php }}${{ matrix.name_suffix }}"
@@ -37,7 +50,7 @@ jobs:
                       composer_flags: '--prefer-lowest'
 
         steps:
-            -   uses: actions/checkout@v2
+            -   uses: actions/checkout@v3
             -   uses: shivammathur/setup-php@v2
                 with:
                     coverage: "none"
