--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
     },
     "require-dev": {
         "ext-mbstring": "*",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
         "phpunit/phpunit": "^9.5",
         "symfony/http-client": "^5.3"
     },
