--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,5 @@
 /.github export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml.dist export-ignore
