--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     },
     "require-dev": {
         "ext-mbstring": "*",
-        "phpstan/phpstan": "^1.9",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3",
-        "phpunit/phpunit": "^9.5",
-        "symfony/http-client": "^5.3"
+        "phpstan/phpstan": "^1.10.39",
+        "phpstan/phpstan-deprecation-rules": "^1.1.4",
+        "phpstan/phpstan-phpunit": "^1.3.15",
+        "phpunit/phpunit": "^9.6.13",
+        "symfony/http-client": "^5.4.29 || ^6.3.5"
     },
     "autoload": {
         "psr-4": {
